--- a/Data_Engineer/Docker/Dockerfile
+++ b/Data_Engineer/Docker/Dockerfile
@@ -7,7 +7,9 @@ RUN pip install -r requirements.txt
 RUN mkdir -p app
 COPY ./App app
 
+WORKDIR app 
+
 EXPOSE 5000
-CMD ["python", "app.py", "--host", "0.0.0.0", "--port", "5000"]
+CMD ["python3", "app.py", "--host", "0.0.0.0", "--port", "5000"]
 
 
