--- a/Data_Engineer/Titanic_Flask/Dockerfile
+++ b/Data_Engineer/Titanic_Flask/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.13.0a4-slim-bullseye
+FROM python:3.10-slim-bullseye
 
 COPY requirements.txt .
 
@@ -11,4 +11,4 @@ WORKDIR app
 
 EXPOSE 5000
 
-CMD [ "python3", "apptitanic.py"]
+CMD [ "python", "apptitanic.py", '--host', '0.0.0.0','--port','5000']
