--- a/Data_Engineer/Titanic_Flask/Dockerfile
+++ b/Data_Engineer/Titanic_Flask/Dockerfile
@@ -4,11 +4,11 @@ COPY requirements.txt .
 
 RUN pip install -r requirements.txt
 
-RUN mkdir -p App
+RUN mkdir -p app
 COPY ./App app
 
 WORKDIR app
 
 EXPOSE 5000
 
-CMD [ "python", "apptitanic.py", '--host', '0.0.0.0','--port','5000']
+CMD [ "python3", "app.py" ]
